fix: correct styling for 404 so that the text is not too light

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -140,11 +140,11 @@ a:hover, .btn:hover, .pink-hover:hover, #mc_embed_signup{  /* i:hover, */
     width:80%;
 }
 
-/* .hr-90-dark {
+.hr-90-dark {
     margin: auto;
     width:90%;
     border: 1px solid #1D212E;
-} */
+}
 
 .hr-50-light {
     margin: auto;
